Added section about me and skills

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="author" content="Joanna Dymarczyk"/>
     <meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1"/>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="css/fonts/fontello.css" type="text/css"/>
 </head>
 <body>
     <!-- Nagłówek -->
@@ -26,5 +27,41 @@
         <button>Kontakt</button>   
         <button>Moje CV</button>
     </div>
+    <br>
+    <br>
+    <div id="about">
+            <p style="font-weight: bold; font-size: 2vw;">O mnie</p>
+        <div class="about-content">
+            <img src="css/woman.jpg", alt="Zdjęcie autorki strony">
+            <div class="about-info">
+                <ul>
+                    <li>Imię i nazwisko: Joanna Dymarczyk</li>
+                    <li> Wiek:  26 lat</li>
+                    <li> Profil:  Fullstack</li>
+                    <li> Telefon: 111 222 333</li>
+                    <li> E-mail: 123@gmail.com</li>
+                </ul>
+            </div>
+            <div class="about-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. ex ea commodo consequat.
+                </p>
+            </div>
+        </div>
+    <br>
+    <br>
+    </div>
+    <div id="skills">
+            <p id="skills-style"> Umiejętności</p>
+        <div id="skill-list">
+            <span class="icon-desktop"><p id="skill-font"><b>UX/UI</b><br>Figma</p></span>
+            <span class="icon-briefcase"><p id="skill-font" ><b>Front End</b><br>HTML, CSS, JavaScript</p></span>
+            <span class="icon-object-ungroup"><p id="skill-font"><b>Back End</b><br>PHP, Node.js</p></span>
+        </div>
+
+
+    
+    </div>
+    
+
 </body>
 </html>
