--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br>
     <br>
     <div id="about">
-            <p style="font-weight: bold; font-size: 2vw;">O mnie</p>
+            <p style="font-weight: bold; font-size: 2vw; margin: 1vw 1.5vw;">O mnie</p>
         <div class="about-content">
             <img src="css/woman.jpg", alt="Zdjęcie autorki strony">
             <div class="about-info">
@@ -51,17 +51,43 @@
     <br>
     </div>
     <div id="skills">
-            <p id="skills-style"> Umiejętności</p>
+            <p id="title-style">Umiejętności</p>
         <div id="skill-list">
             <span class="icon-desktop"><p id="skill-font"><b>UX/UI</b><br>Figma</p></span>
             <span class="icon-briefcase"><p id="skill-font" ><b>Front End</b><br>HTML, CSS, JavaScript</p></span>
             <span class="icon-object-ungroup"><p id="skill-font"><b>Back End</b><br>PHP, Node.js</p></span>
-        </div>
-
-
-    
+        </div>   
     </div>
-    
-
+    <br>
+    <br>
+    <p id="title-style">Portfolio</p>
+    <div id="portfolio">
+        <div class=container>
+            <div class="photo"><img src="css/photo1.jpg" alt="Zdjęcie nr 1"></div>
+            <div class="photo"><img src="css/photo2.jpg" alt="Zdjęcie nr 2"></div>
+            <div class="photo"><img src="css/photo3.jpg" alt="Zdjęcie nr 3"></div>
+            <div class="photo"><img src="css/photo4.jpg" alt="Zdjęcie nr 4"></div>
+            <div class="photo"><img src="css/photo5.jpg" alt="Zdjęcie nr 5"></div>
+        </div>
+    </div>
+        <p id="title-style">Kontakt</p>
+    <div id="contact">
+        <br>
+        <div class="contact-container"><p>Jeśli masz pytania, napisz do mnie. Postaram się odpisać najszybciej jak to możliwe.</p>
+        <br>
+        <br>
+        <div class="contact-data">
+            <b>Designer<br>Poland, Wrocław</b><br>ul. Tęczowa 12/3 50-000<br>+48 123-456-789<br>night-coding@dev.com
+        </div>
+        <div class="form">
+        <form>
+            <input type="text" placeholder= "Imię">
+            <input type="text" placeholder= "Adres e-mail">
+            <input type="text" placeholder= "Temat">
+            <input type="text" placeholder= "Treść wiadomości">
+        </form>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
